--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -111,11 +111,6 @@
           :ruby
             scale_color = "rgb(172, 172, 172)"
             chartkick_library_props = {
-              title: {
-                display: true,
-                fontColor: scale_color,
-                text: "Bikes registered this past week"
-              },
               scales: {
                 yAxes: [{
                   gridLines: { color: "rgba(172, 172, 172, 0.25)" },
@@ -129,8 +124,8 @@
             }
 
           = column_chart Bike.unscoped.where(created_at: (Time.now - 7.days)..Time.now).group_by_day(:created_at).count, thousands: ",", defer: true, library: chartkick_library_props
-          %h4
-            Bikes registered this past week
+          %h4.chart-label
+            Bikes registered this week
         .col-md-2
           .count-block
             %h4
@@ -152,5 +147,9 @@
               Total Recovery value
               %span.count-display
                 = number_with_delimiter(Counts.recoveries_value)
-
+          .count-block
+            %h4
+              Partner Organizations
+              %span.count-display
+                = number_with_delimiter(Organization.count)
 
