--- a/app/views/admin/bikes/edit.html.haml
+++ b/app/views/admin/bikes/edit.html.haml
@@ -74,6 +74,12 @@
           %small.convertTimezone
       %tr
         %td
+          Updated
+        %td
+          %span.convertTime
+            = l @bike.updated_at, format: :convert_time
+      %tr
+        %td
           Cached Data
         %td
           %em.less-strong
