--- a/app/views/layouts/new_admin.html.haml
+++ b/app/views/layouts/new_admin.html.haml
@@ -60,7 +60,7 @@
                                 { title: "Component Types", path: admin_ctypes_path, match_controller: true },
                                 { title: "Graphs", path: admin_graphs_path, match_controller: true },
                                 { title: "Edit Paints", path: admin_paints_path, match_controller: true },
-                                { title: "Feedbacks", path: admin_feedbacks_path, match_controller: true },
+                                { title: "Feedback & Messages", path: admin_feedbacks_path, match_controller: true },
                                 { title: "Tweets", path: admin_tweets_path, match_controller: true },
                                 { title: "Stickers", path: admin_bike_codes_path, match_controller: true },
                                 { title: "Exports", path: admin_exports_path, match_controller: true },
