--- a/app/views/admin/feedbacks/index.html.haml
+++ b/app/views/admin/feedbacks/index.html.haml
@@ -18,7 +18,7 @@
   = number_with_delimiter(@feedbacks.total_count)
   - if params[:search_type].present?
     %strong
-      = params[:search_type]
+      = params[:search_type].gsub("_request", "").humanize
 
   - if params[:search_bike_id].present?
     for #{link_to "bike##{params[:search_bike_id]}", admin_bike_path(params[:search_bike_id])}
@@ -61,8 +61,7 @@
             - else
               = link_to feedback.email, admin_users_path(user_query: feedback.email)
           %td
-            - feedback_type = (feedback.feedback_type || 'msg').humanize
-            = link_to feedback_type, admin_feedbacks_path(type: feedback_type)
+            = link_to feedback.humanized_type, admin_feedbacks_path(sortable_search_params.merge(search_type: feedback.feedback_type))
           %td
             - if feedback.bike_id.present?
               = link_to "#{feedback.bike_id}", admin_bike_path(feedback.bike_id), class: "less-strong"
