--- a/app/views/admin/feedbacks/show.html.haml
+++ b/app/views/admin/feedbacks/show.html.haml
@@ -1,7 +1,9 @@
 .admin-subnav
   .col
     %h1
-      #{link_to 'Feedback and messages', admin_feedbacks_path}
+      Messages
+      %small
+        = link_to "view all", admin_feedbacks_path
 
 .row
   .col-sm-6
@@ -17,7 +19,7 @@
           %td
             Type
           %td
-            = link_to @feedback.feedback_type, admin_feedbacks_path(type: @feedback.feedback_type)
+            = link_to @feedback.humanized_type, admin_feedbacks_path(search_type: @feedback.feedback_type)
         %tr
           %td
             Title
@@ -30,7 +32,7 @@
             = @feedback.name
             %span.less-strong
               - if @feedback.user
-                = link_to @feedback.user.display_name, edit_admin_user_path(@feedback.user)
+                = link_to @feedback.user.display_name, edit_admin_user_path(@feedback.user.to_param)
                 user present
               - else
                 = link_to @feedback.email, admin_users_path(user_query: @feedback.email)
