--- a/app/views/bikes/edit_ownership.html.haml
+++ b/app/views/bikes/edit_ownership.html.haml
@@ -3,10 +3,9 @@
     .row
       = render partial: '/bikes/edit_primary_menu'
       .col-md-8.form-well
-        .form-wrap.secondary-form-wrap
+        .form-wrap
           .form-well-form-header
-            %h3
-              Transfer Ownership
+            %h3 Transfer Ownership
           .col-xs-12
             %p
               Sell, trade or give away this #{@bike.type}?
