--- a/app/views/bikes/edit_groups.html.haml
+++ b/app/views/bikes/edit_groups.html.haml
@@ -6,7 +6,7 @@
         .form-wrap#edit_bike_organizations
           .form-well-form-header
             %h3
-              Groups / Organizations
+              Groups and Organizations
           .col-xs-12
             %p
               Are you part of a school? Want to bolster a local advocacy organization? Add the organization here.
