--- a/app/views/admin/recoveries/index.html.haml
+++ b/app/views/admin/recoveries/index.html.haml
@@ -6,107 +6,17 @@
   .col-md-7
     %ul
       %li.nav-item
-        - eligible = params[:search_recovery_display_status] == "1" || params[:search_recovery_display_status].nil?
-        = link_to "Eligible", admin_recoveries_path(search_recovery_display_status: 1), class: "nav-link #{eligible ? "active" : ""}"
-      %li.nav-item
-        - eligible_no_photo = params[:search_recovery_display_status] == "2"
-        = link_to "Eligible no photo", admin_recoveries_path(search_recovery_display_status: 2), class: "nav-link #{eligible_no_photo ? "active" : ""}"
-      %li.nav-item
-        - not_eligible = params[:search_recovery_display_status] == "0"
-        = link_to "Not Eligible", admin_recoveries_path(search_recovery_display_status: 0), class: "nav-link #{not_eligible ? "active" : ""}"
-      %li.nav-item
-        - displayed = params[:search_recovery_display_status] == "3"
-        = link_to "Displayed", admin_recoveries_path(search_recovery_display_status: 3), class: "nav-link #{displayed ? "active" : ""}"
-      %li.nav-item
-        - not_displayed = params[:search_recovery_display_status] == "4"
-        = link_to "Not displayed", admin_recoveries_path(search_recovery_display_status: 4), class: "nav-link #{not_displayed ? "active" : ""}"
-      %li.nav-item
-        - all = params[:all_recoveries].present?
-        = link_to "All Recoveries", admin_recoveries_path(all_recoveries: true), class: "nav-link #{all ? "active" : ""}"
+        - all_recoveries_active = params[:search_recovery_display_status] == "all"
+        = link_to "All", admin_recoveries_path(sortable_search_params.merge(search_recovery_display_status: "all")), class: "nav-link #{all_recoveries_active ? "active" : ""}"
+      - StolenRecord::RECOVERY_DISPLAY_STATUS_ENUM.each do |recovery_display_status, enum|
+        - active = recovery_display_status_searched == enum
+        %li.nav-item
+          = link_to recovery_display_status.to_s.humanize, admin_recoveries_path(sortable_search_params.merge(search_recovery_display_status: recovery_display_status)), class: "nav-link #{active ? "active" : ""}"
 
 %h4
-  = @recoveries.total_count
-  recoveries
+  = number_with_delimiter(@recoveries.total_count)
+  matching recoveries
 
 = paginate @recoveries, views_prefix: "admin"
-.full-screen-table
-  = form_tag approve_admin_recoveries_path, class: '', id: 'multi_check' do
-    = hidden_field_tag :multipost, true
-    / - unless @posted
-    /   .clearfix#multiapprove_submit
-    /     = submit_tag 'Post checked recoveries', class: 'button-blue pull-right'
-    %table.table.table-striped.table-bordered
-      %thead.thead-light
-        / - unless @posted
-        /   %th
-        /     %input#all_select{ type: 'checkbox' }
-        %th
-          Date recovered
-        %th
-          Bike
-        %th
-          Recovery info
-        %th
-          Location
-        %th
-          H<span class="sm-cell-hide">elped</span>
-        %th
-          S<span class="sm-cell-hide">hareable</span>
-        %th
-          D<span class="sm-cell-hide">isplay</span>
-
-
-      %tbody
-        - @recoveries.each do |recovery|
-          %tr
-            / - unless @posted
-            /   %td.multipost_checkbox
-            /     = check_box_tag "recovery_selected[#{recovery.id}]", recovery.id
-
-            %td
-              %a{href: edit_admin_recovery_url(recovery.id) }
-                - if recovery.date_recovered.present?
-                  - date = recovery.date_recovered
-                - else
-                  - date = recovery.created_at
-                  Stolen on
-                %span.convertTime
-                  = l date, format: :convert_time
-
-            %td
-              - if recovery.bike.present?
-                .less-strong-hold
-                  %span.less-strong-right
-                    = link_to recovery.bike_id, edit_admin_bike_url(recovery.bike)
-                  = recovery.bike.title_string
-                  - if recovery.estimated_value.present?
-                    %small.less-strong
-                      $#{recovery.estimated_value}
-            %td
-              - if recovery.recovered_description.present?
-                = recovery.recovered_description
-              .less-strong
-                = recovery.theft_description.truncate(200) if recovery.theft_description.present?
-              - if recovery.recovering_user.present?
-                %br
-                %small.less-strong
-                  Recovered by
-                  = link_to recovery.recovering_user.display_name, admin_user_path(recovery.recovering_user.to_param)
-                  - unless recovery.recovering_user_owner?
-                    %span.text-warning
-                      not owner!
-            %td
-              - if recovery.address.present?
-                = recovery.city
-            %td.table-cell-check
-              / Posted
-              / = "&#x2713;".html_safe if recovery.recovery_posted
-              = "&#x2713;".html_safe if recovery.index_helped_recovery
-            %td.table-cell-check
-              = "&#x2713;".html_safe if recovery.can_share_recovery
-            %td.table-cell-check
-              - if recovery.recovery_display.present?
-                = link_to "&#x2713;".html_safe, edit_admin_recovery_display_url(recovery.recovery_display)
-
-
-  = paginate @recoveries, views_prefix: "admin"
+= render partial: "table", locals: { recoveries: @recoveries, render_sortable: true }
+= paginate @recoveries, views_prefix: "admin"
