--- a/app/views/admin/recoveries/index.html.haml
+++ b/app/views/admin/recoveries/index.html.haml
@@ -1,104 +1,22 @@
 
-%h1
-  Recoveries
-  - unless @all_recoveries
-    that can be displayed
-
-/ - if @posted
-/   = link_to 'Only unposted', admin_recoveries_url, class: "sharing-links"
-- if @all_recoveries
-  = link_to 'Only displayable', admin_recoveries_url, class: "btn btn-success float-right"
-- else
-  = link_to 'All recoveries', admin_recoveries_url(all_recoveries: true), class: "btn btn-success float-right"
-
+.admin-subnav
+  .col-md-5
+    %h1
+      Recoveries
+  .col-md-7
+    %ul
+      %li.nav-item
+        - all_recoveries_active = params[:search_recovery_display_status] == "all"
+        = link_to "All", admin_recoveries_path(sortable_search_params.merge(search_recovery_display_status: "all")), class: "nav-link #{all_recoveries_active ? "active" : ""}"
+      - StolenRecord::RECOVERY_DISPLAY_STATUS_ENUM.each do |recovery_display_status, enum|
+        - active = recovery_display_status_searched == enum
+        %li.nav-item
+          = link_to recovery_display_status.to_s.humanize, admin_recoveries_path(sortable_search_params.merge(search_recovery_display_status: recovery_display_status)), class: "nav-link #{active ? "active" : ""}"
 
 %h4
-  = StolenRecord.recovered.count
-  recoveries
-%h4
-  = StolenRecord.recovery_unposted.count
-  are waiting to be posted
-
+  = number_with_delimiter(@recoveries.total_count)
+  matching recoveries
 
 = paginate @recoveries, views_prefix: "admin"
-.full-screen-table
-  = form_tag approve_admin_recoveries_path, class: '', id: 'multi_check' do
-    = hidden_field_tag :multipost, true
-    / - unless @posted
-    /   .clearfix#multiapprove_submit
-    /     = submit_tag 'Post checked recoveries', class: 'button-blue pull-right'
-    %table.table.table-striped.table-bordered
-      %thead.thead-light
-        / - unless @posted
-        /   %th
-        /     %input#all_select{ type: 'checkbox' }
-        %th
-          Date recovered
-        %th
-          Bike
-        %th
-          Recovery info
-        %th
-          Location
-        %th
-          H<span class="sm-cell-hide">elped</span>
-        %th
-          S<span class="sm-cell-hide">hareable</span>
-        %th
-          D<span class="sm-cell-hide">isplay</span>
-
-
-      %tbody
-        - @recoveries.each do |recovery|
-          %tr
-            / - unless @posted
-            /   %td.multipost_checkbox
-            /     = check_box_tag "recovery_selected[#{recovery.id}]", recovery.id
-
-            %td
-              %a{href: edit_admin_recovery_url(recovery.id) }
-                - if recovery.date_recovered.present?
-                  - date = recovery.date_recovered
-                - else
-                  - date = recovery.created_at
-                  Stolen on
-                %span.convertTime
-                  = l date, format: :convert_time
-
-            %td
-              - if recovery.bike.present?
-                .less-strong-hold
-                  %span.less-strong-right
-                    = link_to recovery.bike_id, edit_admin_bike_url(recovery.bike)
-                  = recovery.bike.title_string
-                  - if recovery.estimated_value.present?
-                    %small.less-strong
-                      $#{recovery.estimated_value}
-            %td
-              - if recovery.recovered_description.present?
-                = recovery.recovered_description
-              .less-strong
-                = recovery.theft_description.truncate(200) if recovery.theft_description.present?
-              - if recovery.recovering_user.present?
-                %br
-                %small.less-strong
-                  Recovered by
-                  = link_to recovery.recovering_user.display_name, admin_user_path(recovery.recovering_user.to_param)
-                  - unless recovery.recovering_user_owner?
-                    %span.text-warning
-                      not owner!
-            %td
-              - if recovery.address.present?
-                = recovery.city
-            %td.table-cell-check
-              / Posted
-              / = "&#x2713;".html_safe if recovery.recovery_posted
-              = "&#x2713;".html_safe if recovery.index_helped_recovery
-            %td.table-cell-check
-              = "&#x2713;".html_safe if recovery.can_share_recovery
-            %td.table-cell-check
-              - if recovery.recovery_display.present?
-                = link_to "&#x2713;".html_safe, edit_admin_recovery_display_url(recovery.recovery_display)
-
-
-  = paginate @recoveries, views_prefix: "admin"
+= render partial: "table", locals: { recoveries: @recoveries, render_sortable: true }
+= paginate @recoveries, views_prefix: "admin"
