--- a/app/views/admin/recovery_displays/_form.html.haml
+++ b/app/views/admin/recovery_displays/_form.html.haml
@@ -18,8 +18,8 @@
         .col-lg-6
           .form-group
             = f.label :date_recovered
-            - f.object.date_recovered ||= Time.now
-            = f.datetime_local_field :date_recovered, max: Time.now + 1.day, step: 60, required: true, class: 'form-control dateInputUpdateZone', "data-initialtime" => l(f.object.date_recovered, format: :convert_time)
+            - f.object.date_recovered ||= Time.current
+            = f.datetime_local_field :date_recovered, max: Time.current + 1.day, step: 60, required: true, class: 'form-control dateInputUpdateZone', "data-initialtime" => l(f.object.date_recovered, format: :convert_time)
         .col-lg-6
           - if @bike.present?
             .form-group
