--- a/app/views/bikes/edit_bike_details.html.haml
+++ b/app/views/bikes/edit_bike_details.html.haml
@@ -28,7 +28,7 @@
           .form-group.row.fancy-select-placeholder.unfancy.unnested-field
             = f.label :year, 'Model year', class: 'form-well-label'
             .form-well-input
-              - years = (1900..Time.now.year+1).to_a.reverse.map { |i| [i,i] }
+              - years = (1900..Time.current.year+1).to_a.reverse.map { |i| [i,i] }
               = f.select :year, years, prompt: 'Unsure or unknown', allow_blank: true
             .right-input-help
               %label
