--- a/app/views/bikes/new.html.haml
+++ b/app/views/bikes/new.html.haml
@@ -58,8 +58,8 @@
           .form-group.row.fancy-select.unfancy.unnested-field
             = f.label :year, 'Model year', class: 'form-well-label'
             .form-well-input
-              - years = (1900..Time.now.year+1).to_a.reverse.map { |i| [i,i] }
-              = f.select :year, years, prompt: "Unsure or unknown", selected: @bike.year || Time.now.year
+              - years = (1900..Time.current.year+1).to_a.reverse.map { |i| [i,i] }
+              = f.select :year, years, prompt: "Unsure or unknown", selected: @bike.year || Time.current.year
             .right-input-help
               %label
                 %input#bike_unknown_year{ type: 'checkbox', tabindex: -1 }
