--- a/app/views/admin/bulk_imports/index.html.haml
+++ b/app/views/admin/bulk_imports/index.html.haml
@@ -19,7 +19,7 @@
       %small
         = link_to "orgs view", organization_bulk_imports_path(organization_id: current_organization.to_param), class: "less-strong"
 
-= line_chart matching_bulk_imports.group_by_day(:created_at, range: 1.month.ago.midnight..Time.now).count
+= line_chart matching_bulk_imports.group_by_day(:created_at, range: 1.month.ago.midnight..Time.current).count
 
 %p
   = number_with_delimiter(@bulk_imports.total_count)
