--- a/app/views/admin/graphs/tables.html.haml
+++ b/app/views/admin/graphs/tables.html.haml
@@ -5,7 +5,7 @@
     = text_field_tag :location_radius, params[:location_radius], placeholder: 'Proximity in miles', class: "form-control mr-2"
     = hidden_field_tag :tables, true
     = submit_tag 'Load', name: 'search', class: 'btn btn-primary'
-- years = Array(2013..Time.now.year)
+- years = Array(2013..Time.current.year)
 - dates = years.map { |y| Date.civil(y, 6, 6) }
 - yday = Time.zone.now.yday
 - days_left = Time.zone.now.end_of_year.yday - yday
@@ -107,7 +107,7 @@
                   = s_project = count + (BigDecimal.new(count) / yday * days_left).to_i
           %td
             / To calculate for a specific time period:
-            / StolenRecord.unscoped.where(created_at: Time.now.beginning_of_month..Time.now).within_bounding_box(Geocoder::Calculations.bounding_box('Seattle', 25)).count
+            / StolenRecord.unscoped.where(created_at: Time.current.beginning_of_month..Time.current).within_bounding_box(Geocoder::Calculations.bounding_box('Seattle', 25)).count
             = count = StolenRecord.unscoped.where('created_at < ?', date.end_of_year).within_bounding_box(box).count
             - if year == Time.zone.now.year
               %span.less-strong
