--- a/app/views/admin/news/edit.html.haml
+++ b/app/views/admin/news/edit.html.haml
@@ -10,7 +10,7 @@
         - images = @blog.listicles.map(&:image_url)
       - else
         - images = @blog.public_images.map(&:image_url)
-      - images.each do |i| 
+      - images.each do |i|
         %br
         = link_to i, i
       - images.each do |i|
@@ -28,7 +28,7 @@
         #alert-block
           .alert.alert-error
             %h4
-              Please fix the following 
+              Please fix the following
               = pluralize(@blog.errors.count, "error")
             %ul
               - @blog.errors.full_messages.each do |msg|
@@ -47,14 +47,14 @@
             .span6
               .control-group
                 %label.control-label
-                  Published date 
+                  Published date
                 .controls.radio-controls
                   %label.checkbox
                     = f.check_box :post_now
                     Publish now
                 .controls.extra-field
                   = @blog.published_at.strftime("%m-%d-%Y")
-                  
+
                   %a#change_published_date{ href: "#", data: {date: "#{@blog.published_at.strftime("%m-%d-%Y")}" }}
                     edit
 
@@ -62,9 +62,9 @@
                 = label :post_date, "Post date", class: "control-label"
                 .controls
                   #post-date-field
-                    - @blog.post_date = TimeParser.round(@blog.published_at || Time.now, "seconds")
+                    - @blog.post_date = TimeParser.round(@blog.published_at || Time.current, "seconds")
                     = f.hidden_field :timezone, value: "", class: "hiddenFieldTimezone"
-                    = f.datetime_local_field :post_date, max: Time.now + 1.week, step: 60, required: true, class: 'form-control'
+                    = f.datetime_local_field :post_date, max: Time.current + 1.week, step: 60, required: true, class: 'form-control'
 
               .control-group
                 = f.label :published, "Published", class: "control-label"
@@ -95,7 +95,7 @@
                   %label.index-image-select
                     <input type="radio" name="index_image_id" value="0" class="index_image_0">
                     No primary image
-          
+
           .blog-field
             = f.text_field :title, placeholder: "Blog title"
           .blog-field
@@ -125,4 +125,3 @@
   .padded.clearfix
     = link_to "Delete post", admin_news_url(@blog), method: :delete, confirm: "Are you sure?", class: "button-red"
 
-    
