--- a/app/views/news/show.html.haml
+++ b/app/views/news/show.html.haml
@@ -8,7 +8,7 @@
         %a.blog-poster{href: @blogger.userlink}
           = @blogger.name if @blogger.name
       %h4.pub-date
-        - if @blog.published_at > Time.now - 1.week
+        - if @blog.published_at > Time.current - 1.week
           #{l @blog.published_at, format: :standard_display}
         - else
           #{l @blog.published_at, format: :no_day_with_year}
