--- a/app/views/organizations/embed.html.haml
+++ b/app/views/organizations/embed.html.haml
@@ -46,8 +46,8 @@
     .control-group.special-select-single
       = f.label :year, "Model year", class: "control-label"
       .controls
-        - years = (1900..Time.now.year+1).to_a.reverse.map {|i| [i,i] }
-        = f.select :year, years, selected: Time.now.year, prompt: "Unsure or unknown"
+        - years = (1900..Time.current.year+1).to_a.reverse.map {|i| [i,i] }
+        = f.select :year, years, selected: Time.current.year, prompt: "Unsure or unknown"
     .unknown-year.optional-block
       %label
         %input#bike_unknown_year{ type: 'checkbox', tabindex: -1 }
@@ -99,9 +99,9 @@
         .input-group#stolenDisplay
           .control-group{ style: "width: 300px; max-width: 100%;" }
             = builder.label :date_stolen, "When was it stolen?", class: "control-label"
-            - builder.object.date_stolen = TimeParser.round(builder.object.date_stolen || Time.now)
+            - builder.object.date_stolen = TimeParser.round(builder.object.date_stolen || Time.current)
             = builder.hidden_field :timezone, value: "", class: "hiddenFieldTimezone"
-            = builder.datetime_local_field :date_stolen, max: Time.now + 1.day, step: 3600, required: true, class: 'form-control', style: "font-size: 90%; width: 100%;"
+            = builder.datetime_local_field :date_stolen, max: Time.current + 1.day, step: 3600, required: true, class: 'form-control', style: "font-size: 90%; width: 100%;"
         #stolen-bike-location.input-group
           .control-group.special-select-single
             = builder.label :street, 'Where was it stolen?', class: 'control-label'
