--- a/app/views/organizations/embed_extended.html.haml
+++ b/app/views/organizations/embed_extended.html.haml
@@ -36,8 +36,8 @@
     .control-group.special-select-single
       = f.label :year, "Model year", class: "control-label"
       .controls
-        - years = (1900..Time.now.year+1).to_a.reverse.map {|i| [i,i] }
-        = f.select :year, years, selected: Time.now.year, prompt: "Unsure or unknown"
+        - years = (1900..Time.current.year+1).to_a.reverse.map {|i| [i,i] }
+        = f.select :year, years, selected: Time.current.year, prompt: "Unsure or unknown"
     .unknown-year.optional-block
       %label
         %input#bike_unknown_year{ type: 'checkbox', tabindex: -1 }
