--- a/app/assets/stylesheets/registrations.scss
+++ b/app/assets/stylesheets/registrations.scss
@@ -150,6 +150,7 @@ $border-radius-sm: 1px;
 // @import "revised/pages/bikes/edit_ownership";
 // @import "revised/pages/bikes/edit_accessories";
 // @import "revised/pages/bikes/edit_photos";
+// @import "revised/pages/bikes/edit_publicize";
 
 // // Bike registration page styles
 // @import "revised/pages/bikes/choose_registration";
