--- a/app/assets/stylesheets/revised.scss
+++ b/app/assets/stylesheets/revised.scss
@@ -186,6 +186,7 @@ $zoom-img-wrap-z-index: $zindex-navbar-fixed + 100;
 @import "revised/pages/bikes/edit_remove";
 @import "revised/pages/bikes/edit_accessories";
 @import "revised/pages/bikes/edit_photos";
+@import "revised/pages/bikes/edit_publicize";
 
 // Bike registration page styles
 @import "revised/pages/bikes/choose_registration";
